# starting-ragchatbot-codebase

./: .flake8  .gitignore  CLAUDE.md  Makefile  README.md  TESTING_GUIDE.md  TEST_SUMMARY.md  frontend-changes.md  pyproject.toml  pytest.ini  run.sh
backend/: ai_generator.py  app.py  search_tools.py
frontend/: index.html  script.js  style.css
scripts/: check.sh  format.sh  lint.sh
tests/: README.md  conftest.py  test_ai_generator.py  test_app.py  test_document_processor.py  test_rag_system.py  test_search_tools.py  test_session_manager.py  test_vector_store.py
