[project]
name = "starting-codebase"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "chromadb==1.0.15",
    "anthropic==0.58.2",
    "sentence-transformers==5.0.0",
    "fastapi==0.116.1",
    "uvicorn==0.35.0",
    "python-multipart==0.0.20",
    "python-dotenv==1.1.1",
]

[project.optional-dependencies]
dev = [
    "pytest==8.3.2",
    "pytest-asyncio==0.24.0",    # For async FastAPI tests
    "pytest-mock==3.14.0",        # Enhanced mocking via mocker fixture
    "pytest-cov==6.0.0",          # Coverage reporting
    "httpx==0.27.0",              # FastAPI TestClient dependency
]
